prevent text overflow on scoreboard with overflow hidden for now

--- a/code/classic/ui/scoreboard/Scoreboard.scss
+++ b/code/classic/ui/scoreboard/Scoreboard.scss
@@ -51,6 +51,7 @@
 			height: 30px;
 			margin: 3px;
 			background-color: white;
+			overflow: hidden;
 
 			.name {
 				margin-left: 30px;
